# UniBenchmark

./: README.md  meson.build  org.uni.unibenchmark.json
data/: meson.build  org.uni.unibenchmark.appdata.xml.in  org.uni.unibenchmark.desktop.in  org.uni.unibenchmark.gschema.xml
data/icons/: meson.build
po/: POTFILES
src/: main.c  meson.build  unibenchmark-application.c  unibenchmark-application.h  unibenchmark-window.c  unibenchmark-window.h  unibenchmark-window.ui  unibenchmark.gresource.xml
